# KMMMonorepo

./: .bazelrc  .gitignore  BAZEL_SETUP.md  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE  build.gradle.kts  gradle.properties  gradlew  local.properties  settings.gradle.kts
Infrastructure/core/: Package.resolved  Package.swift
Infrastructure/xcodegen-templates/: acceptance_tests_template.yml  api_template.yml  app_extension_template.yml  app_snapshot_tests_template.yml  app_tests_template.yml  application_template.yml  bundle_template.yml  common.yml  demo_application_template.yml  impl_template.yml  sdk_template.yml  snapshot_tests_template.yml  test_kit_template.yml  tests_template.yml
Infrastructure/xcodegen-templates/build-settings/: acceptance_tests_settings.yml  api_settings.yml  application_extension_settings.yml  application_settings.yml  demo_application_settings.yml  impl_settings.yml  resources_settings.yml  sdk_settings.yml  snapshot_tests_settings.yml  test_kit_settings.yml  unit_tests_settings.yml
Mobile/: build.gradle.kts  gradlew  local.properties
Mobile/Apps/iOS/TestApp/: BUILD  (+2 more)
Mobile/BeerGallery/: BUILD  build.gradle.kts
Mobile/SharedNetwork/: build.gradle.kts
Multiplatform/: build.gradle.kts  gradlew
Multiplatform/Architecture/: BUILD  build.gradle.kts
Multiplatform/ClientNetwork/: BUILD  build.gradle.kts
Multiplatform/DTO/: build.gradle.kts
Multiplatform/Serialization/: build.gradle.kts
Multiplatform/Storage/: BUILD  build.gradle.kts
Server/BeerServer/: build.gradle.kts
Server/BeerStorage/: build.gradle.kts
(+341 files in other folders)
