package_group(
    name = "apps",
    packages = [
        "//Mobile/Apps/iOS/TestApp",
    ],
)

package_group(
    name = "libs",
    packages = [
        "//Mobile/Libraries/iOS/iOSArchitecture:API",
        "//Mobile/Libraries/iOS/iOSArchitecture:Impl",
        "//Mobile/Libraries/iOS/iOSAppUtilities",
        "//Mobile/Libraries/iOS/iOSUtilities",
        "//Mobile/Libraries/iOS/iOSStorage",
    ],
)